// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DG BUDG CSV transformer Produces correct JSON output structure 1`] = `
Object {
  "budget": Object {
    "eu_contrib": 3562000,
    "funding_area": null,
    "other_contrib": null,
    "private_fund": null,
    "public_fund": null,
    "total_cost": null,
  },
  "coordinators": Array [
    Object {
      "address": null,
      "country": null,
      "email": null,
      "name": "Eva Maria Plunger (VERBUND AG)",
      "phone": null,
      "region": null,
      "type": null,
      "website": null,
    },
  ],
  "cover_image": "https://ec.europa.eu/budget/euprojects/sites/euprojects/files/at_cegc_985x270_0.jpg",
  "description": "<p>Under the EU-funded Central European Green Corridors project, 115 fast-charging stations for electric cars have opened in Germany, Austria, Slovenia, Slovakia and Croatia – allowing cross-border electromobility with your e-car between Munich and Zagreb. Further network expansion, offers and services for customers and energy supply solutions also drive the project’s roll-out of electric transport. Partners include public sector bodies and private companies.</p>",
  "ec_priorities": Array [
    "Jobs, Growth and Investment",
  ],
  "partners": Array [
    Object {
      "address": null,
      "country": null,
      "name": "Bayern Innovativ",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " BMW",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Nissan",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Renault",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Volkswagen",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Republic of Slovenia",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " ZSE",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " Schrack Technik",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " GreenWay",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " City of Zagreb",
      "region": null,
      "type": null,
      "website": null,
    },
    Object {
      "address": null,
      "country": null,
      "name": " SMATRICS",
      "region": null,
      "type": null,
      "website": null,
    },
  ],
  "programme_name": "Connecting Europe Facility",
  "project_id": "8155",
  "project_locations": Array [
    Object {
      "address": null,
      "country_code": "AT",
      "location": Object {
        "coordinates": Array [
          16.367315,
          48.211312,
        ],
        "type": "Point",
      },
      "nuts2": null,
      "postal_code": null,
      "region": null,
      "town": null,
    },
    Object {
      "address": null,
      "country_code": "HR",
      "location": Object {
        "coordinates": Array [
          16.017459,
          45.803508,
        ],
        "type": "Point",
      },
      "nuts2": null,
      "postal_code": null,
      "region": null,
      "town": null,
    },
    Object {
      "address": null,
      "country_code": "DE",
      "location": Object {
        "coordinates": Array [
          11.10347,
          49.449922,
        ],
        "type": "Point",
      },
      "nuts2": null,
      "postal_code": null,
      "region": null,
      "town": null,
    },
    Object {
      "address": null,
      "country_code": "SK",
      "location": Object {
        "coordinates": Array [
          17.12426,
          48.143047,
        ],
        "type": "Point",
      },
      "nuts2": null,
      "postal_code": null,
      "region": null,
      "town": null,
    },
    Object {
      "address": null,
      "country_code": "SI",
      "location": Object {
        "coordinates": Array [
          14.501456,
          46.048183,
        ],
        "type": "Point",
      },
      "nuts2": null,
      "postal_code": null,
      "region": null,
      "town": null,
    },
  ],
  "project_website": "http://www.cegc-project.eu/",
  "related_links": Array [
    Object {
      "label": "INEA",
      "url": "https://ec.europa.eu/inea/en/ten-t/ten-t-projects/projects-by-country/multi-country/2013-eu-92069-s",
    },
    Object {
      "label": "InvestEU",
      "url": "https://europa.eu/investeu/projects/central-european-green-corridors_en",
    },
  ],
  "results": Object {
    "available": null,
    "result": "Installation and operation of 115 fast-charging stations in 5 European countries,Development and implementation of electromobility and cross-border services for e-car users,Strategic planning for a European fast-charging network.Since the implementation of the Central European Green Corridors project, the European fast-charging network for electric vehicles has continued to grow. An additional 200 fast-charging stations – 180 in Italy and 20 in Austria – are developed. The charging networks in the various countries are compatible with each other. This gives even more citizens the chance to take advantage of cross-border electromobility.",
  },
  "timeframe": Object {
    "from": "2013-12-31T23:00:00.000Z",
    "to": "2014-12-31T23:00:00.000Z",
  },
  "title": "Central European Green Corridors",
}
`;

exports[`DG BUDG CSV transformer Project location information is correctly mapped 1`] = `
Object {
  "address": null,
  "country_code": "AT",
  "location": Object {
    "coordinates": Array [
      16.367315,
      48.211312,
    ],
    "type": "Point",
  },
  "nuts2": null,
  "postal_code": null,
  "region": null,
  "town": null,
}
`;

exports[`DG BUDG transformer handling incomplete or inconsistent data Certain fields should always be present after transformation 1`] = `
Object {
  "budget": Object {
    "eu_contrib": NaN,
    "funding_area": null,
    "other_contrib": null,
    "private_fund": null,
    "public_fund": null,
    "total_cost": null,
  },
  "coordinators": Array [
    Object {
      "address": null,
      "country": null,
      "email": null,
      "name": "",
      "phone": null,
      "region": null,
      "type": null,
      "website": null,
    },
  ],
  "cover_image": null,
  "description": null,
  "ec_priorities": Array [
    "",
  ],
  "partners": Array [
    Object {
      "address": null,
      "country": null,
      "name": "",
      "region": null,
      "type": null,
      "website": null,
    },
  ],
  "programme_name": null,
  "project_id": null,
  "project_locations": Array [
    Object {
      "address": null,
      "country_code": "",
      "location": Object {
        "coordinates": Array [
          23.40014509,
          42.73806663,
        ],
        "type": "Point",
      },
      "nuts2": null,
      "postal_code": null,
      "region": null,
      "town": null,
    },
  ],
  "project_website": null,
  "related_links": Array [],
  "results": Object {
    "available": null,
    "result": null,
  },
  "timeframe": Object {
    "from": "2013-12-31T23:00:00.000Z",
    "to": "2014-12-31T23:00:00.000Z",
  },
  "title": "Bulgaria’s capital expands metro network",
}
`;
